--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,16 +7,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2.3.4
+        uses: actions/checkout@v2
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
       - name: Cypress run
-        uses: cypress-io/github-action@v2
+        uses: cypress-io/github-action@v4.x.x # use the explicit version number
         with:
           build: npm run build
           start: npm start
-        env:
-          CYPRESS_RECORD_KEY :${{secrets.CYPRESS_RECORD_KEY}}
-          GITHUB_TOKEN:{{secrets.GITHUB_TOKEN}}
       
           
